BETA SEASON DEBUT UPDATE